# daily_updates

./: .gitignore  pyproject.toml
src/: embed.py  parser.py  server.py  test.py
